# medicam

./: CMakeLists.txt  prj.conf
boards/: disco_l475_iot1.overlay
include/: camera.h  camera_comm.h  uart.h  wifi.h
src/: camera.c  main.c  uart.c  wifi.c
